objects/Staging_Property_Valuation__c.object
<CustomObject>
    <fields>
        <fullName>DWH_Instance__c</fullName>
        <label>DWH: Instance</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWH_PI_Insurance_Expiry__c</fullName>
        <label>DWH: PI Insurance Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DWH_Source_System__c</fullName>
        <label>DWH: Source System</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWH_Valuation_Date__c</fullName>
        <label>DWH: Valuation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurable_Value__c</fullName>
        <label>Insurable Value</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mtge_Protection_Insurance__c</fullName>
        <label>Mtge Protection Insurance</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NG_ValuationID__c</fullName>
        <label>NG ValuationID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Line_2__c</fullName>
        <label>Name Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Bedrooms__c</fullName>
        <label>Number of Bedrooms,</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Indemnity_Insurance__c</fullName>
        <label>Professional Indemnity Insurance</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_External_ID__c</fullName>
        <label>Property External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Purchase_Type__c</fullName>
        <label>Property Purchase Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Size_Sq_Mtrs__c</fullName>
        <label>Property Size Sq Mtrs</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Valuation_external_Id__c</fullName>
        <externalId>true</externalId>
        <label>Property Valuation external Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Price__c</fullName>
        <label>Purchase Price</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security_Acceptable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Security Acceptable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Security_Zoning_Code__c</fullName>
        <label>Security Zoning Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signing_Valuer_Name__c</fullName>
        <label>Signing Valuer Name,</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signing_Valuer_Reg_No__c</fullName>
        <label>Signing Valuer Reg No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Name__c</fullName>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valuation_Amount__c</fullName>
        <label>Valuation Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valuation_Type_Description__c</fullName>
        <label>Valuation Type Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valuation_Type__c</fullName>
        <label>Valuation Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valuer_Short_Name__c</fullName>
        <label>Valuer Short Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valuer__c</fullName>
        <label>Valuer</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <label>Staging Property Valuation</label>
    <nameField>
        <label>Staging Property Valuation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staging Property Valuations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>